# themesync

./: .gitignore  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/instructions/: breaking-changes.instructions.md  documentation.instructions.md  project-info.instructions.md
.github/workflows/: ci.yml
src/: adapter.rs  cli.rs  config.rs  lib.rs  main.rs
src/adapters/: ghostty.rs  helix.rs  mod.rs  vscode.rs
src/commands/: list.rs  mod.rs  set.rs  status.rs  toggle.rs
