[package]
name = "themesync"
version = "0.1.0"
edition = "2021"

[lib]
name = "themesync"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
async-trait = "0.1"
dirs = "5.0"
serde_json = "1.0"
toml = "0.8"
